[package]
name = "tokio"
version = "1.20.0"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "The `tokio` simulator on madsim."
homepage = "https://github.com/madsys-dev/madsim"
repository = "https://github.com/madsys-dev/madsim"
categories = ["asynchronous", "network-programming", "simulation"]
keywords = ["io", "async", "non-blocking", "futures", "simulator"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

full = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
]

fs = ["real_tokio/fs"]
io-util = ["real_tokio/io-util"]
io-std = ["real_tokio/io-std"]
macros = ["real_tokio/macros"]
net = ["real_tokio/net"]
parking_lot = ["real_tokio/parking_lot"]
process = ["real_tokio/process"]
rt = ["real_tokio/rt"]
rt-multi-thread = ["real_tokio/rt-multi-thread"]
signal = ["real_tokio/signal"]
sync = ["real_tokio/sync"]
time = ["real_tokio/time"]
test-util = ["real_tokio/test-util"]
tracing = ["real_tokio/tracing"]
bytes = ["real_tokio/bytes"]
libc = ["real_tokio/libc"]
memchr = ["real_tokio/memchr"]
mio = ["real_tokio/mio"]
num_cpus = ["real_tokio/num_cpus"]
once_cell = ["real_tokio/once_cell"]
signal-hook-registry = ["real_tokio/signal-hook-registry"]
socket2 = ["real_tokio/socket2"]
stats = ["real_tokio/stats"]
tokio-macros = ["real_tokio/tokio-macros"]


[target.'cfg(madsim)'.dependencies]
madsim = { version = "=0.2.0-alpha.3", path = "../madsim" }

[dependencies]
log = "0.4"
real_tokio = { path = "../tokio/tokio", package = "real_tokio" }
bytes = { version = "1.1" }
futures = { version = "0.3.0", features = ["async-await"] }
mio = { version = "0.8.1" }
