[package]
name = "msim-macros"
version = "0.1.0"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>", "Mysten Labs <build@mystenlabs.com>"]
description = "Mysten sim's proc-macro."
homepage = "https://github.com/MystenLabs/mysten-simulator"
repository = "https://github.com/MystenLabs/mysten-simulator"
license = "Apache-2.0"
categories = ["asynchronous"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
proc-macro2 = "1"
quote = "1"
syn = "1"
