[package]
name = "msim"
version = "0.1.0"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>", "Mysten Labs <build@mystenlabs.com>"]
description = "Deterministic Simulator for distributed systems."
readme = "../README.md"
homepage = "https://github.com/MystenLabs/mysten-simulator"
repository = "https://github.com/MystenLabs/mysten-simulator"
license = "Apache-2.0"
keywords = ["distributed-systems", "async", "deterministic", "simulation"]
categories = ["asynchronous", "simulation"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["macros", "rpc"]
ucx = ["async-ucx"]
rpc = ["bincode"]
macros = ["msim-macros", "tokio/macros"]

[dependencies]
bincode = { version = "1", optional = true }
bytes = "1"
env_logger = "0.9"
futures = "0.3"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
msim-macros = { version = "0.1.0", path = "../msim-macros", optional = true }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(msim)'.dependencies]
ahash = "0.7"
async-task = "4"
downcast-rs = "1.2"
libc = "0.2"
naive-timer = "0.2"
tokio = { path = "../tokio/tokio", package = "real_tokio" }
toml = "0.5"

[target.'cfg(not(msim))'.dependencies]
async-ucx = { version = "0.1", features = ["event"], optional = true }
#tokio = { version = "1", features = ["rt", "fs", "net", "time", "io-util", "sync"] }
tokio = { path = "../tokio/tokio", package = "real_tokio", features = ["rt", "fs", "net", "time", "io-util", "sync"] }
tokio-util = { path = "../tokio/tokio-util", version = "0.7", features = ["codec"] }

[dev-dependencies]
criterion = "0.3"
structopt = "0.3"
tokio = { version = "1", path = "../tokio/tokio", package = "real_tokio", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "rpc"
harness = false

[package.metadata.docs.rs]
# all-features = true
rustc-args = ["--cfg", "msim"]
rustdoc-args = ["--cfg", "msim", "--cfg", "docsrs"]
