[package]
name = "msim"
version = "0.1.0"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>", "Mysten Labs <build@mystenlabs.com>"]
description = "Deterministic Simulator for distributed systems."
readme = "../README.md"
homepage = "https://github.com/MystenLabs/mysten-simulator"
repository = "https://github.com/MystenLabs/mysten-simulator"
license = "Apache-2.0"
keywords = ["distributed-systems", "async", "deterministic", "simulation"]
categories = ["asynchronous", "simulation"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["macros", "rpc"]
rpc = ["bincode"]
macros = ["msim-macros", "tokio/macros"]

[dependencies]
bincode = { version = "1", optional = true }
bytes = "1"
futures = "0.3"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
msim-macros = { version = "0.1.0", path = "../msim-macros", optional = true }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
pin-project-lite = "0.2"
tap = "1"

[build-dependencies]
cc = { version = "1.0" }

[target.'cfg(msim)'.dependencies]
ahash = "0.7"
downcast-rs = "1.2"
libc = "0.2"
naive-timer = "0.2"
tokio = { git = "https://github.com/MystenLabs/tokio-msim-fork.git", rev = "c59702c3177a31405d42ec12e01fa4a445728326", package = "real_tokio", features = ["full"] }
tokio-util = { git = "https://github.com/MystenLabs/tokio-msim-fork.git", rev = "c59702c3177a31405d42ec12e01fa4a445728326", features = ["full"] }
toml = "0.5"
socket2 = "0.4"
erasable = "1.2"

# TODO: revert back to the crates-io version after https://github.com/smol-rs/async-task/pull/34 merges
async-task = { git = "https://github.com/mystenmark/async-task", rev = "4e45b26e11126b191701b9b2ce5e2346b8d7682f" }

[dev-dependencies]
criterion = "0.3"
structopt = "0.3"
tokio = { git = "https://github.com/MystenLabs/tokio-msim-fork.git", rev = "c59702c3177a31405d42ec12e01fa4a445728326", package = "real_tokio", features = ["full"] }

[[bench]]
name = "rpc"
harness = false

[package.metadata.docs.rs]
# all-features = true
rustc-args = ["--cfg", "msim"]
rustdoc-args = ["--cfg", "msim", "--cfg", "docsrs"]
