[package]
name = "futures-timer"
version = "3.0.3"
authors = ["Mysten Labs"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/MystenLabs/mysten-sim.git"
homepage = "https://github.com/MystenLabs/mysten-sim.git"
description = """
Replacement for futures-timer crate, which schedules timers
using a helper thread instead of an existing tokio runtime.
"""

[dependencies]
tokio = { version = "1", features = ["time"] }

# We don't use these packages for anything, but mirroring the dependencies of the
# real futures-timer package makes [patch] work better
gloo-timers = { version = "0.2.0", features = ["futures"], optional = true }
send_wrapper = { version = "0.4.0", optional = true }

[features]
wasm-bindgen = [
    "gloo-timers",
    "send_wrapper"
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(msim)',
] }
