[package]
name = "anemo-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
tokio = "1"
tracing = "0.1"
tower = "0.4"
rand = "0.8"

anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "bb8a9a6950905ea1264b81f78542b28919b25abb" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "bb8a9a6950905ea1264b81f78542b28919b25abb" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "bb8a9a6950905ea1264b81f78542b28919b25abb" }

msim = { path = "../../msim" }
msim-macros = { path = "../../msim-macros" }


[patch.crates-io]
tokio = { path = "../../msim-tokio" }
